@@ -1,3 +1,15 @@
+2013-01-23  Oliver Hunt  <oliver@apple.com>
+
+        Add RELEASE_ASSERT (and a few friends)
+        https://bugs.webkit.org/show_bug.cgi?id=107725
+
+        Reviewed by Filip Pizlo.
+
+        Adding a few macros to make release mode assertions easier and more readable.
+        Also makes same assertions more useful in debug builds.
+
+        * wtf/Assertions.h:
+
 2013-01-22  Joshua Bell  <jsbell@chromium.org>
 
         Prevent race condition during Worker shutdown
